<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.gov.moj.cp.azure.ragservice</groupId>
    <artifactId>cp-ai-rag-service</artifactId>
    <version>17.0.28-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>ai-document-shared-artefacts</module>
        <module>ai-document-metadata-check-function</module>
        <module>ai-document-ingestion-function</module>
        <module>ai-document-answer-retrieval-function</module>
        <module>ai-document-answer-scoring-function</module>
        <module>ai-document-status-check-function</module>
    </modules>

    <properties>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <azure.functions.maven.plugin.version>1.24.0</azure.functions.maven.plugin.version>
        <azure.functions.java.library.version>3.1.0</azure.functions.java.library.version>
        <plugins.maven.jgitflow.version>1.0-m5.1</plugins.maven.jgitflow.version>
        <azure.openai.version>1.0.0-beta.16</azure.openai.version>
        <junit-jupiter-engine.version>5.11.0-M2</junit-jupiter-engine.version>
        <mockito-junit-jupiter.version>5.20.0</mockito-junit-jupiter.version>
        <assertj-core.version>3.24.2</assertj-core.version>
        <azure.storage.version>8.6.6</azure.storage.version>
        <azure.storage.blob>12.21.0</azure.storage.blob>
        <azure.storage.queue>12.21.0</azure.storage.queue>
        <azure.data.tables>12.4.0</azure.data.tables>
        <azure.ai.formrecognizer>4.1.3</azure.ai.formrecognizer>
        <langchain4j.version>0.30.0</langchain4j.version>
        <jackson.version>2.15.2</jackson.version>

        <!-- SonarQube Properties -->
        <sonar.projectKey>uk.gov.moj.cp.azure.ragservice:cp-ai-rag-service</sonar.projectKey>
        <sonar.projectName>CP AI RAG Service</sonar.projectName>
        <opentelemetry-sdk.version>1.34.0</opentelemetry-sdk.version>
        <azure-monitor-opentelemetry-exporter.version>1.0.0-beta.15</azure-monitor-opentelemetry-exporter.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>external.atlassian.jgitflow</groupId>
                    <artifactId>jgitflow-maven-plugin</artifactId>
                    <version>${plugins.maven.jgitflow.version}</version>
                    <configuration>
                        <flowInitContext>
                            <masterBranchName>dev/release</masterBranchName>
                            <developBranchName>main</developBranchName>
                            <featureBranchPrefix>dev/feature-</featureBranchPrefix>
                            <releaseBranchPrefix>dev/release-</releaseBranchPrefix>
                            <hotfixBranchPrefix>dev/hotfix-</hotfixBranchPrefix>
                            <versionTagPrefix>v</versionTagPrefix>
                        </flowInitContext>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <enableSshAgent>true</enableSshAgent>
                        <pushReleases>true</pushReleases>
                    </configuration>
                </plugin>
            </plugins>

        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-sdk-bom</artifactId>
                <version>1.2.27</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-ai-openai</artifactId>
                <version>${azure.openai.version}</version>
            </dependency>

            <dependency>
                <groupId>com.microsoft.azure.functions</groupId>
                <artifactId>azure-functions-java-library</artifactId>
                <version>${azure.functions.java.library.version}</version>
            </dependency>

            <!-- document intelligence-->
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-ai-formrecognizer</artifactId>
                <version>${azure.ai.formrecognizer}</version>
            </dependency>
            <!-- langchain4j -->
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>

            <!-- Telemetry dependencies -->
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-monitor-opentelemetry-exporter</artifactId>
                <version>${azure-monitor-opentelemetry-exporter.version}</version>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-sdk</artifactId>
                <version>${opentelemetry-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-sdk-metrics</artifactId>
                <version>1.34.0</version>
            </dependency>

            <!-- Logging dependency -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.36</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>2.25.2</version>
            </dependency>

            <!-- Testing dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter-engine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito-junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>uk.org.webcompere</groupId>
                <artifactId>model-assert</artifactId>
                <version>1.1.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-inline</artifactId>
                <version>5.2.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Project wide dependencies listed here -->
        <!-- Log dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>uk.org.webcompere</groupId>
            <artifactId>model-assert</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
